fixing spacing on banner

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -304,7 +304,7 @@ body {
 // hero-section
 .hero-section {
 	min-height: 660px;
-	padding-top: 180px;
+	padding-top: 100px;
 	background: $lighter_gray;
 	.heading-container {
 		@media (min-width: 992px) {
